--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   mongodb:
     image: mongo:6.0
-    container_name: todo-mongodb-tdd
+    container_name: todo-mongodb
     ports:
       - "27017:27017"
     environment:
@@ -15,9 +15,9 @@ services:
 
   mysql:
     image: mysql:8.0
-    container_name: todo-mysql-tdd
+    container_name: todo-mysql
     ports:
-      - "3306:3306"
+      - "3307:3306"
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: todoapp
