--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
             <version>1.18.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-simple</artifactId>
+    	<version>2.0.13</version>
+	</dependency>
     </dependencies>
     <build>
         <plugins>
