--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -171,31 +171,12 @@ jobs:
             target/site/jacoco/
           retention-days: 30
 
-    mutation-testing:
+  mutation-testing:
     name: Mutation Testing (TDD Quality)
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
-    services:
-      mongodb:
-        image: mongo:6.0
-        ports:
-          - 27017:27017
-        env:
-          MONGO_INITDB_DATABASE: todoapp_test
-          
-      mysql:
-        image: mysql:8.0
-        ports:
-          - 3306:3306
-        env:
-          MYSQL_ROOT_PASSWORD: testpassword
-          MYSQL_DATABASE: todoapp_test
-          MYSQL_USER: testuser
-          MYSQL_PASSWORD: testpass
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -213,18 +194,15 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Wait for services
-        run: |
-          echo "⏳ Waiting for database services..."
-          while ! nc -z localhost 27017; do sleep 2; done
-          echo "✅ MongoDB ready"
-          while ! nc -z localhost 3306; do sleep 2; done
-          echo "✅ MySQL ready"
-
       - name: Run PIT Mutation Testing
         run: |
           echo "🧬 Running TDD Mutation Testing..."
-          mvn clean test org.pitest:pitest-maven:mutationCoverage
+          # Only run mutation testing if we have substantial code to test
+          if find src/main/java -name "*.java" 2>/dev/null | wc -l | awk '{print $1}' | xargs test 5 -lt; then
+            mvn clean test org.pitest:pitest-maven:mutationCoverage
+          else
+            echo "⚠️ Project too small for meaningful mutation testing - skipping"
+          fi
         env:
           TESTFX_HEADLESS: true
           JAVA_OPTS: "-Djava.awt.headless=true"
